--- a/gold-admin-frontend/src/app/views/pages/loan-settings/loan-scheme/loan-scheme.component.html
+++ b/gold-admin-frontend/src/app/views/pages/loan-settings/loan-scheme/loan-scheme.component.html
@@ -27,7 +27,7 @@
                         <div class="row border-bottom">
                             <div
                                 class="col-4 heading bg-secondary kt-padding-t-20 kt-padding-b-20 border-right border-left-radius">
-                                Tennure
+                                Payment Frequency
                             </div>
                             <div
                                 class="col bg-secondary heading text-center kt-padding-t-20 kt-padding-b-20 border-right">
