--- a/gold-admin-frontend/src/app/views/pages/lead-management/lead-management.component.scss
+++ b/gold-admin-frontend/src/app/views/pages/lead-management/lead-management.component.scss
@@ -10,14 +10,14 @@
         flex: 0 0 13% !important;
         padding-left: 5px !important;
     }
-    .mat-column-mobile{
-        flex: 0 0 8% !important;
+    .mat-column-view{
+        flex: 0 0 4% !important;
     }
     .mat-column-pan{
         flex: 0 0 9% !important;
     }
     .mat-column-internalBranch{
-        flex: 0 0 8% !important;
+        flex: 0 0 12% !important;
     }
     .mat-column-state{
         flex: 0 0 10% !important;
