--- a/gold-admin-frontend/src/app/views/pages/loan-management/loan-application-form/tabs/interest-calculator/interest-calculator.component.html
+++ b/gold-admin-frontend/src/app/views/pages/loan-management/loan-application-form/tabs/interest-calculator/interest-calculator.component.html
@@ -29,7 +29,7 @@
                             [class.isError]="controls.schemeId.touched && controls.schemeId.invalid">
                             <option value="" [selected]="true" [disabled]="true">Select Schemes</option>
                             <option [value]="schemes.id" *ngFor="let schemes of schemesList">
-                                {{schemes.schemeName | uppercase}} {{schemes.schemeAmountStart}} - {{schemes.schemeAmountEnd}}
+                                {{schemes.schemeName | uppercase}} ({{schemes.schemeAmountStart}} - {{schemes.schemeAmountEnd}})
                             </option>
                         </select>
                         <mat-error *ngIf="controls.schemeId.touched && controls.schemeId.invalid">Filed is required
