--- a/gold-admin-frontend/src/styles.scss
+++ b/gold-admin-frontend/src/styles.scss
@@ -590,3 +590,35 @@ mat-header-row {
 .mat-input-element{
 	caret-color: black !important;
 }
+
+// table
+table {
+	border-collapse:separate !important;
+	border:solid #dbdce0 1px;
+	border-radius:10px;
+	-moz-border-radius:10px;
+}
+
+td, th {
+	border-left:solid #dbdce0 1px;
+	border-top:solid #dbdce0 1px;
+}
+
+th {
+	background-color: #EFF0F1;
+	border-top: none;
+}
+th:first-child{
+	border-top-left-radius: 10px;
+}
+th:last-child{
+	border-top-right-radius: 10px;
+}
+
+td:first-child, th:first-child {
+	 border-left: none;
+}
+
+.currency{
+	font-family: sans-serif !important;
+}
