--- a/gold-admin-frontend/src/app/views/partials/components/filtered-data/filtered-data.component.html
+++ b/gold-admin-frontend/src/app/views/partials/components/filtered-data/filtered-data.component.html
@@ -7,9 +7,10 @@
                     <div class="filtered-data" *ngIf="filteredList?.category?.length">
                         <div class="filtered-title">By Category</div>
                         <div class="d-flex">
-                            <div class="filtered-value" *ngFor="let item of filteredList?.category">
+                            <div class="filtered-value" *ngFor="let item of filteredList?.category; let i = index;">
                                 <span>{{item?.categoryName}}</span>
-                                <img class="kt-pointer cancel-filtered-value" src="assets/media/icons/cancel.svg">
+                                <img class="kt-pointer cancel-filtered-value" src="assets/media/icons/cancel.svg"
+                                    (click)="clearFilter('category', i)">
                             </div>
                         </div>
                     </div>
@@ -17,9 +18,10 @@
                     <div class="filtered-data" *ngIf="filteredList?.subCategory?.length">
                         <div class="filtered-title">By Sub-Category</div>
                         <div class="d-flex">
-                            <div class="filtered-value" *ngFor="let item of filteredList?.subCategory">
+                            <div class="filtered-value" *ngFor="let item of filteredList?.subCategory; let i = index;">
                                 <span>{{item?.subCategoryName}}</span>
-                                <img class="kt-pointer cancel-filtered-value" src="assets/media/icons/cancel.svg">
+                                <img class="kt-pointer cancel-filtered-value" src="assets/media/icons/cancel.svg"
+                                    (click)="clearFilter('subCategory', i)">
                             </div>
                         </div>
                     </div>
@@ -29,7 +31,8 @@
                         <div class="d-flex">
                             <div class="filtered-value">
                                 <span>{{filteredList?.priceFrom}}</span>
-                                <img class="kt-pointer cancel-filtered-value" src="assets/media/icons/cancel.svg">
+                                <img class="kt-pointer cancel-filtered-value" src="assets/media/icons/cancel.svg"
+                                    (click)="clearFilter('priceFrom')">
                             </div>
                         </div>
                     </div>
@@ -39,7 +42,8 @@
                         <div class="d-flex">
                             <div class="filtered-value">
                                 <span>{{filteredList?.priceTo}}</span>
-                                <img class="kt-pointer cancel-filtered-value" src="assets/media/icons/cancel.svg">
+                                <img class="kt-pointer cancel-filtered-value" src="assets/media/icons/cancel.svg"
+                                    (click)="clearFilter('priceTo')">
                             </div>
                         </div>
                     </div>
