--- a/gold-admin-frontend/src/app/views/pages/lead-management/lead-management.component.html
+++ b/gold-admin-frontend/src/app/views/pages/lead-management/lead-management.component.html
@@ -69,12 +69,14 @@
                     <mat-cell *matCellDef="let lead">
                         <ng-container *ngIf="lead.status.id == '1' &&  lead.customerKyc !== null">
                             <div [ngStyle]="{'display': 'inherit'}" *ngIf="!lead.customerKyc.isKycSubmitted">
-                                <button (click)="goToKyc(lead.mobileNumber)" class="apply-kyc" *ngxPermissionsOnly="['customerKycAdd']">Apply KYC</button>
+                                <button (click)="goToKyc(lead)" class="apply-kyc"
+                                    *ngxPermissionsOnly="['customerKycAdd']">Apply KYC</button>
                             </div>
                         </ng-container>
                         <ng-container *ngIf="lead.status.id == '1' &&  lead.customerKyc == null">
                             <div [ngStyle]="{'display': 'inherit'}">
-                                <button (click)="goToKyc(lead.mobileNumber)" class="apply-kyc" *ngxPermissionsOnly="['customerKycAdd']">Apply KYC</button>
+                                <button (click)="goToKyc(lead)" class="apply-kyc"
+                                    *ngxPermissionsOnly="['customerKycAdd']">Apply KYC</button>
                             </div>
                         </ng-container>
                     </mat-cell>
@@ -84,7 +86,8 @@
                     <mat-header-cell *matHeaderCellDef>Actions</mat-header-cell>
                     <mat-cell *matCellDef="let lead">
                         <div *ngIf="lead.status.id !== 1" [ngStyle]="{'display': 'inherit'}">
-                            <div class="kt-pointer" (click)="editLead(lead)" class="kt-pointer" *ngxPermissionsOnly="['leadManagmentEdit']">Edit</div>
+                            <div class="kt-pointer" (click)="editLead(lead)" class="kt-pointer"
+                                *ngxPermissionsOnly="['leadManagmentEdit']">Edit</div>
                         </div>
                         <div *ngIf="lead.status.id == 1" [ngStyle]="{'display': 'inherit'}">
                             <div>-</div>
@@ -94,7 +97,8 @@
                 <ng-container matColumnDef="view">
                     <mat-header-cell *matHeaderCellDef></mat-header-cell>
                     <mat-cell *matCellDef="let lead">
-                        <div *ngxPermissionsOnly="['leadManagmentView']" class="kt-pointer" (click)="viewLead(lead)">View</div>
+                        <div *ngxPermissionsOnly="['leadManagmentView']" class="kt-pointer" (click)="viewLead(lead)">
+                            View</div>
                     </mat-cell>
                 </ng-container>
 
